Fix issue with spaces in relative URLs.